--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,11 +47,11 @@ flutter:
 
 #-------------------------- LOCAL ASSETS --------------------------#
   assets:
-    - assets/icons/
     - assets/images/on_boarding_images/
     - assets/images/email_otp_images/
     - assets/images/home_screen/
     - assets/images/document_logo_images/
+    - assets/images/document_images/
     - assets/logos/
 
 
