--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,15 @@ dependencies:
 
   # Utility Packages
   http: ^1.3.0
-  intl: ^0.20.2
+  intl: ^0.18.1
   url_launcher: ^6.3.1
   logger: ^2.5.0
   flutter_native_splash: ^2.4.0
   smooth_page_indicator: ^1.2.1
   google_fonts: ^6.2.1
-  table_calendar: ^3.2.0
+  table_calendar: ^3.0.9
+  syncfusion_flutter_pdfviewer: ^24.2.9
+
 
   # Icons
   iconsax: ^0.0.8
@@ -53,6 +55,7 @@ flutter:
     - assets/images/document_logo_images/
     - assets/images/document_images/
     - assets/logos/
+    - assets/pdfs/
 
 
 
