--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   lucide_icons: ^0.257.0
   shared_preferences: ^2.3.2
   image_picker: ^1.1.2
+  flutter_launcher_icons: ^0.14.3
+
 
 
   # Icons
@@ -37,7 +39,10 @@ dependencies:
   get_storage: ^2.1.1
 
   # Product Specific
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logos/dms-document-management-system-digital-business-cloud-storage-icon-digital-data_100456-10606.jpg"
 #-------------------------- ./ PACKAGES END --------------------------#
 
 dev_dependencies:
