--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^2.3.2
   image_picker: ^1.1.2
   flutter_launcher_icons: ^0.14.3
+  http_parser: ^4.0.2
 
 
 
