--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   image_picker: ^1.1.2
   flutter_launcher_icons: ^0.14.3
   http_parser: ^4.0.2
+  flutter_cached_pdfview: ^0.4.3
+  pdfrx: ^0.4.3
+#  pdf_render: ^1.4.0
+
 
 
 
